<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_tab"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/search_tab"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>
    <item
        android:id="@+id/register_tab"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_register"
        android:title="@string/register"/>
    <item
        android:id="@+id/talk_tab"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_talk"
        android:title="@string/talk"/>
    <item
        android:id="@+id/my_tab"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_my"
        android:title="@string/my"/>


</menu>
