<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.main.add.tag.TagActivity">

    <LinearLayout
        android:id="@+id/linear_category"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/category_margin_top"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ic_left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_left_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/iv_ok"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_check"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_write_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottom_border_gray"
        android:layout_below="@+id/linear_category">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/write_tag"
            android:layout_marginLeft="1dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_tag_caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_write_tag"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_3"/>
    </LinearLayout>

</RelativeLayout>