<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.main.my.tradeRecord.balance.BalanceRecordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/add_account"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_account"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15dp"
                android:textStyle="bold"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_balance_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_balance_account"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                app:tint="@color/colorGray" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_balance_account"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/balance_caution"/>

    </LinearLayout>


</FrameLayout>