<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.login.bottomSheet.LoginBottomSheetDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_login"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:layout_marginBottom="17dp"
            android:textSize="@dimen/login_large_txt"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/white"
            android:text="@string/facebook_login"
            android:textColor="@color/black"
            android:textSize="@dimen/login_other_small"
            android:drawableLeft="@drawable/iv_facebook_login"
            android:layout_marginLeft="@dimen/login_other_facebook_margin"
            android:stateListAnimator="@null"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/white"
            android:text="@string/naver_login"
            android:textColor="@color/black"
            android:textSize="@dimen/login_other_small"
            android:drawableLeft="@drawable/iv_naver_login"
            android:drawablePadding="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="@dimen/login_other_naver_margin"
            android:stateListAnimator="@null"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/white"
            android:text="@string/personal_login"
            android:textColor="@color/black"
            android:textSize="@dimen/login_other_small"
            android:drawableLeft="@drawable/iv_personal_login"
            android:layout_marginTop="7dp"
            android:drawablePadding="7dp"
            android:layout_marginLeft="@dimen/login_other_personal_margin"
            android:stateListAnimator="@null"
            android:textStyle="bold"/>
    </LinearLayout>

</FrameLayout>