<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.main.home.tablayout.recommend.detail.tradeDialog.ProductTradeBottomDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_pay_safety"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_pay"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/ic_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                app:tint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_delivery_trade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bottom_border_gray"
            android:paddingBottom="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_delivery_trade"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_delivery_trade_txt"
                android:textColor="@color/colorGray"
                android:layout_marginLeft="20dp"
                android:lineSpacingExtra="5dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_direct_trade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_direct_trade"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/product_direct_trade_txt"
                android:textColor="@color/colorGray"/>
        </LinearLayout>


    </LinearLayout>

</FrameLayout>